--- a/src/app/Components/LandingPage/LandingPage.css
+++ b/src/app/Components/LandingPage/LandingPage.css
@@ -32,6 +32,7 @@
 
 @media (max-width: 480px) {
     .body-container{
+        margin-top: 10vh;
         flex-direction: column;
         align-items: center;
         justify-content: center;
